manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: default  # Specify the namespace here
  labels:
        app: flask
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "5000"
spec:
  replicas: 1  # Use multiple replicas to test load balancing
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: miranafea/simple-flask:v1
        ports:
        - containerPort: 5000
