manifests/dummy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-app
  
spec:
  replicas: 1  # Use multiple replicas to test load balancing
  selector:
    matchLabels:
      app: dummy
  template:
    metadata:
      labels:
        app: dummy
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/"
        prometheus.io/port: "80"
    spec:
      containers:
      - name: dummy
        image: busybox
        ports:
        - containerPort: 80
