manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      # annotations:
      #   prometheus.io/scrape: "true"
      #   prometheus.io/path: "/"
      #   prometheus.io/port: "80"
    spec:
      containers:
        - name: frontend
          image: miranafea/frontend:latest
          ports:
            - containerPort: 80
