manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: default  # Specify the namespace here
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "5000"
spec:
  selector:
    app: flask
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
