manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: testcom
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
  - host: frontendbackend
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: backendapp
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
